--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,470 +1,474 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
-@import url('https://fonts.googleapis.com/css2?family=Lato');
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code');
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed");
+@import url("https://fonts.googleapis.com/css2?family=Lato");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code");
 
 :root {
-    --background: #222;
-    --background-alt: #F0F0F0;
-    --background-code: #111;
-    --background-powershell: #0B4EAA;
-	--text: #F0F0F0;
-    --text-alt: #222;
-    --text-code: #D6D6D6;
-    --text-emph: #759DFF;
-    --text-highlight: #D6C13A;
-    --links: #9333FF;
+  --background: #222;
+  --background-alt: #f0f0f0;
+  --background-code: #111;
+  --background-powershell: #0b4eaa;
+  --text: #f0f0f0;
+  --text-alt: #222;
+  --text-code: #d6d6d6;
+  --text-emph: #759dff;
+  --text-highlight: #d6c13a;
+  --links: #9333ff;
 }
 
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    position: relative;
-    min-height: 100vh;
-    max-width: 100vw;
-    overflow-x: hidden;
-	font-family: 'Roboto Condensed', sans-serif;
-    line-height: 1.4em;
-    font-size: 18px;
-    color: var(--text);
-    background: var(--background);
-    padding-bottom: 1rem;
+  position: relative;
+  min-height: 100vh;
+  max-width: 100vw;
+  overflow-x: hidden;
+  font-family: "Roboto Condensed", sans-serif;
+  line-height: 1.4em;
+  font-size: 18px;
+  color: var(--text);
+  background: var(--background);
+  padding-bottom: 1rem;
 }
 
 main {
-    margin: 1rem 1rem 5rem 1rem;
+  margin: 1rem 1rem 5rem 1rem;
 }
 
 nav {
-    position: relative;
-    height: 10vh;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background: var(--background);
+  position: relative;
+  height: 10vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background: var(--background);
 }
 
 nav a {
-    display: block;
-    text-decoration: none;
-    font-size: 20px;
-    color: var(--text);
-    padding: 18px 16px;
+  display: block;
+  text-decoration: none;
+  font-size: 20px;
+  color: var(--text);
+  padding: 18px 16px;
 }
 
 nav a:hover {
-    color: var(--text-alt);
-    background: var(--background-alt);
+  color: var(--text-alt);
+  background: var(--background-alt);
 }
 
 nav a.hamburger {
-    display: block;
-    position: absolute;
-    right: 1vw;
+  display: block;
+  position: absolute;
+  right: 1vw;
 }
 
 /* Hide the desktop menu on mobile device */
 nav #desktop-menu {
-    display: none;
+  display: none;
 }
 
 #mobile-menu {
-    position: absolute;
-    top: 10vh;
-    right: 0;
-    width: 200px;
-    display: flex;
-    flex-direction: column;
-    visibility: hidden;
-    z-index: 1;
-    background: var(--background);
+  position: absolute;
+  top: 10vh;
+  right: 0;
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  visibility: hidden;
+  z-index: 1;
+  background: var(--background);
 }
 
 #mobile-menu a {
-    position: relative;
-    padding: 0.5rem 1rem;
-    display: block;
-    text-decoration: none;
-    font-size: 20px;
-    color: var(--text);
+  position: relative;
+  padding: 0.5rem 1rem;
+  display: block;
+  text-decoration: none;
+  font-size: 20px;
+  color: var(--text);
 }
 
 img {
-    display: block;
-    max-width: 100%;
+  display: block;
+  max-width: 100%;
 }
 
 header {
-    display: grid;
-    grid-gap: 1rem;
-    margin-bottom: 3rem;
+  display: grid;
+  grid-gap: 1rem;
+  margin-bottom: 3rem;
 }
 
 header div {
-    margin: 0 1rem;
+  margin: 0 1rem;
 }
 
 header h1 {
-    margin-bottom: 0.5rem;
-}
-
-article {
-    margin: auto;
-    display: flex;
-    flex-direction: column;
+  margin-bottom: 0.5rem;
 }
 
 section {
-    position: relative;
-    margin: 1rem auto;
-}
-
-article h2 {
-    padding-top: 1rem;
-    padding-bottom: 0.5rem;
-    margin-bottom: 1rem;
-}
-
-article section h2 {
-    border-bottom: solid;
-}
-
-article section h3 {
-    margin-bottom: 0.5rem;
-}
-
-article section a {
-    color: var(--links);
+  position: relative;
+  /* margin: 1rem auto; */
 }
 
 section h3 a {
-    text-decoration: none;
-    color: var(--text);
+  text-decoration: none;
+  color: var(--text);
 }
 
 section ul {
-    margin-bottom: 1rem;
-    margin-left: 1rem;
+  margin-bottom: 1rem;
+  margin-left: 1rem;
 }
 
-.content section {
-    margin-bottom: 2rem;
+article section {
+  margin-bottom: 1rem;
 }
 
-.content section:last-child {
-    margin-bottom: auto;
+article section h2 {
+  padding-top: 2rem;
+  padding-bottom: 0.5rem;
+  margin-bottom: 1rem;
+  border-bottom: solid;
 }
 
-.content section p {
-    margin-bottom: 1rem;
+article section h3 {
+  margin-bottom: 0.5rem;
 }
 
-.content section .definitions p {
-    margin-bottom: auto;
+article section a {
+  color: var(--links);
 }
 
-.content section .console p {
-    margin-bottom: auto;
+article section:last-child {
+  margin-bottom: auto;
 }
 
-h1, h2, h3 {
-    font-family: Lato, 'Roboto Condensed', sans-serif;
+article section p {
+  margin-bottom: 1rem;
+}
+
+article section .definitions p {
+  margin-bottom: auto;
+}
+
+article section .console p {
+  margin-bottom: auto;
+}
+
+h1,
+h2,
+h3 {
+  font-family: Lato, "Roboto Condensed", sans-serif;
 }
 
 h1 {
-    line-height: 1.2em;
-    margin-bottom: 1rem;
+  line-height: 1.2em;
+  margin-bottom: 1rem;
 }
 
 h4 {
-    margin-bottom: 1.2rem;
+  margin-bottom: 1.2rem;
 }
 
 ul {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 ul:last-child {
-    margin-bottom: auto;
+  margin-bottom: auto;
 }
 
 li {
-    list-style-type: circle;
-    list-style-position: outside;
-    margin-bottom: 0.2rem;
+  list-style-type: circle;
+  list-style-position: outside;
+  margin-bottom: 0.2rem;
 }
 
 li a {
-    font-size: 19px;
-    color: var(--text);
-    text-decoration: none;
+  font-size: 19px;
+  color: var(--text);
+  text-decoration: none;
 }
 
 footer {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    padding: 1rem;
-    text-align: center;
-    background: var(--background);
-    color: var(--text);
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  text-align: center;
+  background: var(--background);
+  color: var(--text);
 }
 
 .center-page {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    color: red;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  color: red;
 }
 
 .grid {
-    display: grid;
-    grid-auto-rows: auto;
+  display: grid;
+  grid-auto-rows: auto;
 }
 
 .tile {
-    display: block;
-    text-align: center;
-    justify-self: center;
-    margin: 1rem 0;
+  display: block;
+  text-align: center;
+  justify-self: center;
+  margin: 1rem 0;
 }
 
 .tile:last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .tile h2 a {
-    text-decoration: none;
-    color: var(--text);
+  text-decoration: none;
+  color: var(--text);
 }
 
 .tile img {
-    text-align: center;
-    border-radius: 10px;
-    margin: 1rem auto;
+  text-align: center;
+  border-radius: 10px;
+  margin: 1rem auto;
 }
 
 .tile p {
-    display: block;
-    margin: auto;
-    padding: 0 1rem;
-    text-align: center;
+  display: block;
+  margin: auto;
+  padding: 0 1rem;
+  text-align: center;
 }
 
 .definitions {
-    grid-template-columns: max-content auto;
-    column-gap: 1rem;
-    row-gap: 0.2rem;
-    margin-bottom: 1rem;
+  grid-template-columns: max-content auto;
+  column-gap: 1rem;
+  row-gap: 0.2rem;
+  margin-bottom: 1rem;
 }
 
 .definitions:last-child {
-    margin-bottom: auto;
+  margin-bottom: auto;
+}
+
+.title {
+  margin: auto 1rem;
 }
 
 .toc {
-    position: relative;
-    margin: 1rem 0;
+  position: relative;
+  margin-bottom: 1rem;
+  top: 0rem;
+}
+
+.toc h2 {
+  padding-top: 2rem;
+  padding-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .toc ul {
-    padding-left: 1rem;
+  padding-left: 1rem;
 }
 
 .console {
-    font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
-    font-size: 16px;
-    color: var(--text-code);
-    border-radius: 10px;
-    padding: 1rem;
-    margin-bottom: 1rem;
+  font-family: "Fira Code", "Roboto Condensed", sans-serif;
+  font-size: 16px;
+  color: var(--text-code);
+  border-radius: 10px;
+  padding: 1rem;
+  margin-bottom: 1rem;
 }
 
 .console p {
-    padding-bottom: 0.2rem;
+  padding-bottom: 0.2rem;
 }
 
 .console p:last-child {
-    padding-bottom: 0;
+  padding-bottom: 0;
 }
 
 .console p .fa-clone {
-    float: right;
-    display: none;
+  float: right;
+  display: none;
 }
 
 .comment span {
-    font-style: italic;
+  font-style: italic;
 }
 
 .bash .console {
-    background: var(--background-code);
+  background: var(--background-code);
 }
 
 .bash .console .comment:before {
-    content: "$ ";
+  content: "$ ";
 }
 
 .bash .console .comment span:before {
-    content: "# ";
+  content: "# ";
 }
 
 .bash .console .command:before {
-    content: "$ ";
+  content: "$ ";
 }
 
 .powershell .console {
-    background-color: var(--background-powershell);
+  background-color: var(--background-powershell);
 }
 
 .powershell .console .cmdlet {
-    color: var(--text-highlight);
+  color: var(--text-highlight);
 }
 
 .powershell .var {
-    color: #00AF3A;
+  color: #00af3a;
 }
 
 .powershell .console .command:before {
-    content: "C:\\> ";
+  content: "C:\\> ";
 }
 
 .powershell .console .comment:before {
-    content: "C:\\> ";
+  content: "C:\\> ";
 }
 
 .powershell .console .comment-block:before {
-    content: "C:\\> ";
+  content: "C:\\> ";
 }
 
 .powershell .console .comment span:before {
-    content: "# ";
+  content: "# ";
 }
 
 .powershell .snippet {
-    background-color: var(--background-powershell);
+  background-color: var(--background-powershell);
 }
 
 .output {
-    color: var(--text-highlight);
+  color: var(--text-highlight);
 }
 
 .snippet {
-    font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
-    font-size: 17px;
-    border-radius: 5px;
-    color: var(--text-code);
-    background-color: var(--background-code);
-    padding: 0.1rem 0.3rem;
+  font-family: "Fira Code", "Roboto Condensed", sans-serif;
+  font-size: 17px;
+  border-radius: 5px;
+  color: var(--text-code);
+  background-color: var(--background-code);
+  padding: 0.1rem 0.3rem;
 }
 
 .code-text {
-    font-family: 'Fira Code', 'Roboto Condensed', sans-serif;
+  font-family: "Fira Code", "Roboto Condensed", sans-serif;
 }
 
 .emph {
-    font-weight: 600;
-    color: var(--text-emph);
+  font-weight: 600;
+  color: var(--text-emph);
 }
 
 /* Small tablets and sideways phones */
 @media screen and (min-width: 600px) {
-    header {
-        grid-template-columns: 3fr 2fr;
-    }
+  header {
+    grid-template-columns: 3fr 2fr;
+  }
 
-    header div {
-        margin: auto 3rem auto 1rem;
-    }
+  header div {
+    margin: auto 3rem auto 1rem;
+  }
 
-    header h1 {
-        line-height: 1.4em;
-        margin-bottom: 1rem;
-    }
+  header h1 {
+    line-height: 1.4em;
+    margin-bottom: 1rem;
+  }
 
-    article {
-        flex-direction: row;
-    }
+  main {
+    width: 90%;
+    margin: auto;
+    margin-bottom: 5rem;
+  }
 
-    .gallery {
-        grid-template-columns: repeat(2, 1fr);
-        column-gap: 1rem;
-    }
+  .gallery {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1rem;
+  }
 
-    .center {
-        text-align: center;
-    }
+  .center {
+    text-align: center;
+  }
 
-    .toc {
-        width: 30%;
-        padding: 0 1rem;
-        word-wrap: break-word;
-    }
-
-    .content {
-        width: 70%;
-        padding: 0 1rem;
-    }
+  .toc {
+    /* padding: 1rem; */
+    margin-bottom: 1rem;
+    word-wrap: break-word;
+  }
 }
 
 /* Large tablets and small laptops */
 @media screen and (min-width: 960px) {
-    body {
-        font-size: 19px;
-        line-height: 1.4em;
-    }
+  body {
+    font-size: 19px;
+    line-height: 1.4em;
+  }
 
-    article {
-        width: 90%;
-    }
+  main {
+    width: 80%;
+  }
 
-    nav a {
-        float: left;
-        padding: 14px 16px;
-        text-decoration: none;
-    }
+  nav a {
+    float: left;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
 
-    nav a.hamburger {
-        display: none;
-    }
+  nav a.hamburger {
+    display: none;
+  }
 
-    nav #desktop-menu {
-        position: absolute;
-        right: 1rem;
-        display: block;
-    }
+  nav #desktop-menu {
+    position: absolute;
+    right: 1rem;
+    display: block;
+  }
 
-    .gallery {
-        grid-template-columns: repeat(3, 1fr);
-    }  
+  article {
+    width: 75%;
+    display: inline-block;
+  }
 
-    .toc {
-        padding: 0 2rem;
-    }
+  .gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
 
-    .content {
-        width: 90%;
-        padding: 0 2rem;
-    }
-    
-    .console p:hover .fa-clone {
-        display: block;
-    }
-    
-    .console a {
-        text-decoration: none;
-        color: var(--text-code);
-    }
+  .toc {
+    float: left;
+    width: 25%;
+    position: sticky;
+    overflow-y: auto;
+  }
+
+  .console p:hover .fa-clone {
+    display: block;
+  }
+
+  .console a {
+    text-decoration: none;
+    color: var(--text-code);
+  }
 }
 
 /* Desktops and large monitors */
 @media screen and (min-width: 1200px) {
-    .gallery {
-        grid-template-columns: repeat(4, 1fr);
-    }   
+  .gallery {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
