--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,7 @@
 
 /* Monokai color scheme */
 /* https://gist.github.com/r-malon/8fc669332215c8028697a0bbfbfbb32a */
+
 :root {
   --background: #222;
   --background-alt: #f0f0f0;
@@ -37,21 +38,22 @@ body {
   position: relative;
   min-height: 100vh;
   max-width: 100vw;
-  overflow-x: hidden;
   font-family: "Roboto Condensed", sans-serif;
   line-height: 1.4em;
   font-size: 18px;
   color: var(--text);
   background: var(--background);
-  padding-bottom: 1rem;
+  padding-bottom: 1rem; 
 }
 
 main {
-  margin: 1rem 1rem 5rem 1rem;
+  margin: 0rem 1rem 5rem 1rem;
 }
 
 nav {
-  position: relative;
+  position: sticky;
+  top: 0;
+  z-index: 1;
   height: 60px;
   display: flex;
   flex-direction: row;
@@ -60,7 +62,7 @@ nav {
 }
 
 nav a {
-  display: block;
+  display: inline-block;
   text-decoration: none;
   font-size: 20px;
   color: var(--text);
@@ -73,9 +75,9 @@ nav a:hover {
 }
 
 nav a.hamburger {
-  display: block;
+  display: inline-block;
   position: absolute;
-  right: 1vw;
+  right: 0;
 }
 
 /* Hide the desktop menu on mobile device */
@@ -84,14 +86,14 @@ nav #desktop-menu {
 }
 
 #mobile-menu {
-  position: absolute;
+  position: fixed;
   top: 60px;
   right: 0;
   width: 200px;
   display: flex;
+  z-index: 1;
   flex-direction: column;
   visibility: hidden;
-  z-index: 1;
   background: var(--background);
 }
 
@@ -104,23 +106,13 @@ nav #desktop-menu {
   color: var(--text);
 }
 
+header {
+  margin: 1rem;
+}
+
 img {
   display: block;
   max-width: 100%;
-}
-
-header {
-  display: grid;
-  grid-gap: 1rem;
-  margin-bottom: 3rem;
-}
-
-header div {
-  margin: 0 1rem;
-}
-
-header h1 {
-  margin-bottom: 0.5rem;
 }
 
 section {
@@ -233,6 +225,20 @@ footer {
   color: var(--text);
 }
 
+.landing {
+  display: grid;
+  grid-gap: 1rem;
+  margin-bottom: 3rem;
+}
+
+.landing div {
+  margin: 0 1rem;
+}
+
+.landing h1 {
+  margin-bottom: 0.5rem;
+}
+
 .about p {
   margin-bottom: 1rem;
 }
@@ -295,14 +301,10 @@ footer {
   margin-bottom: auto;
 }
 
-.title {
-  margin: 2rem 1rem;
-}
-
 .toc {
   position: relative;
   margin-bottom: 1rem;
-  top: 0rem;
+  /* top: 0rem; */
 }
 
 .toc h2 {
@@ -470,19 +472,6 @@ footer {
 
 /* Small tablets and sideways phones */
 @media screen and (min-width: 600px) {
-  header {
-    grid-template-columns: 3fr 2fr;
-  }
-
-  header div {
-    margin: auto 3rem auto 1rem;
-  }
-
-  header h1 {
-    line-height: 1.4em;
-    margin-bottom: 1rem;
-  }
-
   main {
     width: 90%;
     margin: auto;
@@ -492,6 +481,19 @@ footer {
   article img {
     width: 50%;
     margin: auto;
+  }
+
+  .landing {
+    grid-template-columns: 3fr 2fr;
+  }
+
+  .landing div {
+    margin: auto 3rem auto 1rem;
+  }
+
+  .landing h1 {
+    line-height: 1.4em;
+    margin-bottom: 1rem;
   }
 
   .gallery {
@@ -509,15 +511,6 @@ footer {
     margin-bottom: 1rem;
     word-wrap: break-word;
   }
-
-  .flex {
-    display: flex;
-    flex-direction: row;
-  }
-
-  .flex img {
-    width: 30%;
-  }
 }
 
 /* Large tablets and small laptops */
@@ -529,10 +522,15 @@ footer {
 
   main {
     width: 85%;
+    display: flex;
+    flex-direction: row;
+  }
+
+  nav {
+    position: relative;
   }
 
   nav a {
-    float: left;
     padding: 14px 16px;
     text-decoration: none;
   }
@@ -543,7 +541,7 @@ footer {
 
   nav #desktop-menu {
     position: absolute;
-    right: 1rem;
+    right: 0rem;
     display: block;
   }
 
@@ -557,10 +555,11 @@ footer {
   }
 
   .toc {
-    float: left;
     width: 25%;
     position: sticky;
-    overflow-y: auto;
+    align-self: flex-start;
+    /* overflow-y: auto; */
+    top: 0rem;
   }
 
   .console p:hover .fa-clone {
@@ -575,11 +574,11 @@ footer {
 
 /* Desktops and large monitors */
 @media screen and (min-width: 1200px) {
-  .gallery {
-    grid-template-columns: repeat(4, 1fr);
-  }
-
   main {
     max-width: 1400px;
+  }
+  
+  .gallery {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
